--- a/hpv2/hpv/index4.html
+++ b/hpv2/hpv/index4.html
@@ -30,6 +30,7 @@
         <div class="bottom">
             <div class="left">
                 <div class="circle1" >
+                    <!-- <a href=""></a> -->
                     <img src="../img/飞机 (1).png" alt="" style="width: 130px;height: 130px;margin-left: 30px;margin-top: 30px;" id="plane">
                     <div class="closeall" id="closeall" style="display: none;" >
                     <div class="compare" id="compare" >
